Fix alignment of close icon in flash messages (#5724)
[ci skip]

--- a/app/assets/stylesheets/content/_notifications.sass
+++ b/app/assets/stylesheets/content/_notifications.sass
@@ -304,9 +304,7 @@ $nm-upload-box-padding: rem-calc(15) rem-calc(25)
   .close-handler
     float: none
     position: absolute
-    top: rem-calc(11)
     right: rem-calc(11)
-    font-size: 1rem
     cursor: pointer
 
   &::before
